[package]
name = "raspberrypi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"