[package]
name = "raspberrypi"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Utils
kagero = { version = "0.1.0", default-features = false, features = ["printer"] } 
# Webserver
actix-web = "4"
actix-files = "0.6.1"
# Config
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
regex = "1.6.0"
# Authentication
htpasswd-verify = "0.2.1"
htpasswd = "0.2.0"